--- a/intranet/templates/base.html
+++ b/intranet/templates/base.html
@@ -17,17 +17,22 @@
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          <ul class="nav">
+          <nav class="nav">
             <li><a class="brand" href="{% url 'home' %}">{{ constants.SITE_NAME }}</a></li>
             {% for id, name, link in menu %}
             <li><a href="{{ link }}" id="menu-{{ id }}">{{ name }}</a></li>
             {% endfor %}
-          </ul>
+          </nav>
         </div>
       </div>
     </div>
     {% endblock menu %}
 
+    <div class="row">
+      <div class="span4 offset2" id="messages">
+        <p id="debug" />
+      </div>
+    </div>
     {% block content %}{% endblock content %}
 
     {% block footer %}{% endblock footer %}
@@ -38,5 +43,6 @@
     {% else %}
     <script src="{% static 'jquery/jquery.min.js' %}" ></script>
     {% endif %}
+    {% block javascript %}{% endblock javascript %}
   </body>
 </html>
