--- a/streaming/templates/streams.html
+++ b/streaming/templates/streams.html
@@ -30,5 +30,5 @@
 {% endblock content %}
 
 {% block javascript %}
-<script type="text/javascript" src="streams.js"></script>
+<script type="text/javascript" src="list_streams.js"></script>
 {% endblock javascript %}
